# dynamical-pde-diffusion

./: .gitignore  README.md  environment.yml  fine_tune.py  nohup.out  pyproject.toml  test.py  test2.py  train.py  validate.py
conf/: config.yaml  test.yaml  train.yaml  validate.yaml
conf/dataset/: heat_eq.yaml  heat_eq_lineart_forward.yaml  heat_eq_lineart_joint.yaml  heat_eq_logt_forward.yaml  heat_eq_logt_joint.yaml  heat_no_cond.yaml  heat_no_time.yaml  llg_eq.yaml  llg_eq_forward.yaml  llg_eq_joint.yaml  llg_no_time.yaml
conf/model/: unet.yaml  unetv2.yaml
conf/sampling_conf/: heat_logt_joint.yaml  heat_no_cond.yaml  heat_no_time.yaml  llg.yaml  llg_no_time.yaml
notebooks/: 00_testing.ipynb  01_heat_model.ipynb  02_validation.ipynb  03_llg_equation.ipynb  03_testing_validation.ipynb  04_llg_equation.ipynb  05_test_new_architecture.ipynb  06_debugging.ipynb  DEBUG.ipynb  inspect_models.ipynb  modify_datasets.ipynb  network_debugging.ipynb  results.ipynb  sampler_hyperparameter_opt.ipynb  save_model_to_wandb.ipynb  wandb_stuff.ipynb
src/diffusion_pde/: __init__.py  model_testing.py  utils.py  validation.py
src/diffusion_pde/datasets/: __init__.py  dataset.py
src/diffusion_pde/models/: __init__.py  loss.py  nets.py  pde_losses.py
src/diffusion_pde/pdes/: __init__.py  generate_heat.py  generate_heat_no_cond.py  generate_llg.py  heat.py  heat_no_cond.py  utils.py
src/diffusion_pde/sampling/: __init__.py  pde_losses.py  sample.py
src/diffusion_pde/training/: __init__.py  training_loop.py
tests/: test_llg_pde_loss.py
