[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion_pde"
version = "0.1.0"
description = "Diffusion models for solving PDEs"
authors = [{name="Philip Hohwy"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "wandb",
]

[tool.setuptools.packages.find]
where = ["src"]
